--- a/.circleci/base-generated-config.yaml
+++ b/.circleci/base-generated-config.yaml
@@ -27,7 +27,7 @@ jobs:
             # Execute gherkin tests for given application 
             cd ${CIRCLE_WORKING_DIRECTORY}/test/
             EXAMPLE_APPLICATION_ABSOLUTE_PATH=<<parameters.path >> docker-compose up --build gherkin-test-report
-            ls
+            ls /tests_result
       - checkout 
       - run:
           name: Export test results 
