--- a/examples/mock/Dockerfile
+++ b/examples/mock/Dockerfile
@@ -2,6 +2,7 @@ FROM node:14-alpine
 
 RUN npm install -g @mockoon/cli@2.2.1
 COPY mockoon-digitalregistries.json ./mockoon-digitalregistries.json
+COPY entrypoint.sh ./entrypoint.sh
 
 # Do not run as root.
 RUN adduser --shell /bin/sh --disabled-password --gecos "" mockoon
