--- a/.circleci/base-generated-config.yaml
+++ b/.circleci/base-generated-config.yaml
@@ -32,9 +32,9 @@ jobs:
             chmod u+x << parameters.example-app-path >>/test_entrypoint.sh
             cd << parameters.example-app-path >> && ./test_entrypoint.sh
 
-            # Execute gherkin tests for given application
-            cd << parameters.test-suite-path >>
-            ./test_entrypoint.sh
+            # Execute gherkin tests for given application using test_entrypoint.sh
+            chmod u+x << parameters.test-suite-path >>/test_entrypoint.sh
+            cd << parameters.test-suite-path >> && ./test_entrypoint.sh
       - checkout
       - run:
           name: Export test results
