--- a/.circleci/base-generated-config.yaml
+++ b/.circleci/base-generated-config.yaml
@@ -19,8 +19,8 @@ jobs:
       SOURCE_BRANCH: $CIRCLE_BRANCH
       TEST_SUITE: << parameters.test-suite-name >>
       TEST_APP: << parameters.example-app-name >>
-      TEST_RESULT_STORAGE_URL: $TEST_RESULT_STORAGE_URL
-      TEST_RESULTS_STORAGE_API_KEY: $TEST_RESULTS_STORAGE_API_KEY
+      TEST_RESULT_STORAGE_URL: TEST_RESULT_STORAGE_URL
+      TEST_RESULTS_STORAGE_API_KEY: TEST_RESULTS_STORAGE_API_KEY
       TEST_RESULT_REPORT_PATH: << parameters.test-suite-path >>/result/example_result.message
     steps:
       - checkout
