--- a/.circleci/base-generated-config.yaml
+++ b/.circleci/base-generated-config.yaml
@@ -19,8 +19,6 @@ jobs:
       SOURCE_BRANCH: $CIRCLE_BRANCH
       TEST_SUITE: << parameters.test-suite-name >>
       TEST_APP: << parameters.example-app-name >>
-      TEST_RESULT_STORAGE_URL: TEST_RESULT_STORAGE_URL
-      TEST_RESULTS_STORAGE_API_KEY: TEST_RESULTS_STORAGE_API_KEY
       TEST_RESULT_REPORT_PATH: << parameters.test-suite-path >>/result/example_result.message
     steps:
       - checkout
@@ -37,6 +35,9 @@ jobs:
       - checkout
       - run:
           name: Export test results
+          environment:
+            TEST_RESULT_STORAGE_URL: TEST_RESULT_STORAGE_URL
+            TEST_RESULTS_STORAGE_API_KEY: TEST_RESULTS_STORAGE_API_KEY
           command: |
             # API POST call is executed using exported result file and additional execution information as an input
             if ! [ -f "$TEST_RESULT_REPORT_PATH" ]; then
