--- a/.circleci/base-generated-config.yaml
+++ b/.circleci/base-generated-config.yaml
@@ -14,12 +14,6 @@ jobs:
     machine:
       image: ubuntu-2004:current
       docker_layer_caching: true
-    environment:
-      BUILDING_BLOCK: $CIRCLE_PROJECT_REPONAME
-      SOURCE_BRANCH: $CIRCLE_BRANCH
-      TEST_SUITE: << parameters.test-suite-name >>
-      TEST_APP: << parameters.example-app-name >>
-      TEST_RESULT_REPORT_PATH: << parameters.test-suite-path >>/result/example_result.message
     steps:
       - checkout
       - run:
@@ -36,18 +30,19 @@ jobs:
       - run:
           name: Export test results
           command: |
+            export TEST_RESULT_REPORT_PATH=<< parameters.test-suite-path >>/result/example_result.message
             # API POST call is executed using exported result file and additional execution information as an input
             if ! [ -f "$TEST_RESULT_REPORT_PATH" ]; then
                 echo "Report file has to be available under ${TEST_RESULT_REPORT_PATH} directory"
                 exit 1
             fi
 
-            curl -v -F buildingBlock=${BUILDING_BLOCK}    \
-                    -F report=@${TEST_RESULT_REPORT_PATH} \
-                    -F testSuite=${TEST_SUITE}            \
-                    -F testApp=${TEST_APP}                \
-                    -F sourceBranch=${CIRCLE_BRANCH}      \
-                    -H "x-api-key: ${TEST_RESULTS_STORAGE_API_KEY}" \
+            curl -v -F buildingBlock=${CIRCLE_PROJECT_REPONAME}    \
+                    -F report=@${TEST_RESULT_REPORT_PATH}          \
+                    -F testSuite=<< parameters.test-suite-name >>  \
+                    -F testApp=<< parameters.example-app-name >>   \
+                    -F sourceBranch=${CIRCLE_BRANCH}               \
+                    -H "x-api-key: ${TEST_RESULTS_STORAGE_API_KEY}"\
                     "${TEST_RESULT_STORAGE_URL}"
 
 
