--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ orbs:
 workflows:
   test_everything:
     jobs:
-      - test-harness/create-config
+      - test-harness/create-config:
+          post-steps: # Persist to workspace has to be defined in main workflow 
+            - persist_to_workspace:
+                root: /tmp/
+                paths:
+                  - generated.yml
       - test-harness/execute-tests
 
