--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
       - test-harness/create-config:
           post-steps: # Persist to workspace has to be defined in main workflow 
             - persist_to_workspace:
-                root: /tmp/
+                root: workspace
                 paths:
                   - generated.yml
       - test-harness/execute-tests
