TECH-116: New release of orb used

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,8 @@ workflows:
                 root: workspace
                 paths:
                   - generated.yml
-      - test-harness/execute-tests
+      - test-harness/execute-tests:
+          requires:
+          - test-harness/create-config
+
 
